# livekit-django-api

./: .gitignore  README.md  manage.py  pyproject.toml
livekitapi/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
livekitapi/migrations/: 0001_initial.py
livekitapi/templates/livekitapi/: logo.html  room.html
livekitapi_example/: asgi.py  settings.py  urls.py  wsgi.py
